2007-03-12  Guillem Jover  <guillem@debian.org>

	* scripts/changelog/debian.pl: Fix call to outputclose by not passing
	anything to it.
	($varlistfile): Remove unused variable.

2007-03-12  Guillem Jover  <guillem@debian.org>

	* lib/dpkg.h (compression_type): Rename to ...
	(compress_type): ... this. Fix all users.
	(CAT): Rename to ...
	(compress_type_cat): ... this. Fix all users.
	(GZ): Rename to ...
	(compress_type_gzip): ... this. Fix all users.
	(BZ2): Rename to ...
	(compress_type_bzip2): ... this. Fix all users.

2007-03-06  Guillem Jover  <guillem@debian.org>

	* lib/compression.c (fd_fd_filter): New function, refactored. As
	a side effect the 'failed to exec' string gets unified, and all
	commands use oshite now.
	(decompress_cat): Use fd_fd_filter instead of the duped code.
	(compress_cat): Likewise.

2007-03-06  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-scanpackages.pl (usage): Documemt that the override
	file is now optional.
	(load_override): New function, refactored. Handle the case where
	'$override' is undefined.

2007-02-28  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-checkbuilddeps.pl: Make getopt parse '--admindir'.
	($admindir): New variable.
	(usage): Document '--admindir'.
	(parse_status): The status argument is not optional anymore.
	* scripts/dpkg-shlibdeps.pl: Parse '--admindir'.
	($admindir): New variable.
	($shlibsppdir): Initialize it after parsing the arguments.
	(usage): Document '--admindir'.
	* scripts/dpkg-buildpackage.sh: Parse '--admindir', and document it in
	usage output. Pass it to dpkg-checkbuilddeps.

2007-02-28  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl (usage): Use '$altdir' instead of
	hardcoding its value.

2007-02-28  Colin Watson  <cjwatson@ubuntu.com>

	* scripts/dpkg-gencontrol.pl: Add missing parenthesis in regular
	expression handling Origin, Bugs and Maintainer for control file
	fields.

2007-02-17  Guillem Jover  <guillem@debian.org>
