@@ -26,12 +26,12 @@ lenny
    allowed or added. The main problem I'm facing with this one is and nice a
    clean implementation, the PoC and the idea how to fix it is present already.
 
- * Support lzma compression.
-
 1.14.x
 ------
 
  * Add Wig&Pen source package support.
+
+ * Support lzma and bzip2 source package compression.
 
  * Get rid of install-info.
 
