@@ -50,6 +50,8 @@ dpkg (1.14.0) UNRELEASED; urgency=low
     dpkg-buildpackage(1), dpkg-distaddfile(1), dpkg-genchanges(1),
     dpkg-gencontrol(1), dpkg-parsechangelog(1), dpkg-shlibdeps(1),
     deb-shlibs(5) and deb-substvars(5).
+  * Support building binary packages with the member data.tar.lzma compressed
+    with lzma.
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
