@@ -1,5 +1,10 @@
 2007-03-13  Guillem Jover  <guillem@debian.org>
 
+	* dpkg-deb.1: Move '-z' to it's own OPTIONS entry. Document '-Z',
+	and the new 'lzma' value.
+
+2007-03-13  Guillem Jover  <guillem@debian.org>
+
 	* po/add_de/dpkg-scanpackages.1.de.add: Copy to ...
 	* po/add_de/deb-override.5.de.add: ... here.
 	* po/add_es/dpkg-scanpackages.1.es.add: Copy to ...
