@@ -1,3 +1,10 @@
+2007-03-13  Guillem Jover  <guillem@debian.org>
+
+	* lib/compression.c (compress_cat): Support compress_type_lzma.
+	* dpkg-deb/build.c (do_build): Likewise.
+	* dpkg-deb/main.c (usage): Document that '-Z' now accepts lzma as well.
+	(setcompresstype): Parse 'lzma' as compress_type_lzma.
+
 2007-03-12  Guillem Jover  <guillem@debian.org>
 
 	* scripts/changelog/debian.pl: Fix call to outputclose by not passing
